为了符合Standard Go Project Layout的结构

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
             "type": "go",
             "request": "launch",
             "mode": "auto",
-            "program": "main.go",
+            "program": "${file}",
             "args": [
                 "https://www.bilibili.com/video/BV17na4ziE4U?spm_id_from=333.1007.tianma.1-1-1.click",
             ]
